--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -68,6 +68,13 @@
 			<version>8.0.11</version>
 		</dependency>
 		
+		<dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>4.2.2</version>
+        </dependency>   
+        
+        
 		<!-- <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-devtools</artifactId>
