--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/abc
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
